istio/monitoring/mtls/000-strict-peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: marian-reforms
  namespace: lizzoslunch
spec:
  mtls:
    mode: STRICT
